--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@ body {
 h3 {
   margin: 20px 0 20px 0;
 }
-
+p {
+  margin: 15px 0 15px 0;
+}
 header {
   padding-top: 30px;
   padding-bottom: 20px;
@@ -75,6 +77,19 @@ header nav ul li a:hover {
 #kafe-droppen h2 {
   margin: 20px 0 20px 0;
 }
+#kafe-droppen button {
+  height: 38px;
+  border: none;
+  margin: 20px 0 20px 0;
+  padding: 0 20px 0 20px;
+  background: #e8491d;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+}
+#lektion-3-dialog {
+  display: none;
+}
 #gotland {
   display: inline-flex;
   justify-content: space-between;
@@ -91,6 +106,7 @@ footer {
   color: yellow;
   font-size: 18px;
   text-align: center;
+  margin: 400px 0 0 0;
 }
 
 @media(max-width:768px){
