--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ header nav ul li a:hover {
   color: white;
   font-size: 20px;
   cursor: pointer;
+  
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 #lektion-3-dialog {
   display: none;
